--- a/Trip_Buddy/app/src/main/res/values/colors.xml
+++ b/Trip_Buddy/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#030303</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="LoginBackground">#b5f5ef</color>
+    <color name="LoginBackground">#b8e2de</color>
+    <color name="WordLight">#fcd305</color>
+    <color name="WordDark">#fca105</color>
 </resources>
