--- a/Trip_Buddy/app/src/main/res/layout/activity_login.xml
+++ b/Trip_Buddy/app/src/main/res/layout/activity_login.xml
@@ -11,26 +11,25 @@
         android:id="@+id/btnSignin"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/edtPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="58dp"
         android:background="@color/WordDark"
         android:text="Sign in"
         android:textAllCaps="false"
-        android:textColor="@color/colorPrimary" />
+        android:textColor="@color/colorPrimary"
+        android:layout_below="@+id/btnGBpassword"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/edtUser"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_alignParentTop="true"
 
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="21dp"
         android:background="@color/colorPrimary"
         android:ems="10"
         android:inputType="textPersonName"
-        android:textColor="@color/colorPrimaryDark" />
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_below="@+id/textView4"
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:id="@+id/edtPassword"
@@ -38,10 +37,10 @@
         android:textColor="@color/colorPrimaryDark"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:layout_below="@+id/edtUser"
+        android:layout_below="@+id/textView3"
         android:layout_alignLeft="@+id/edtUser"
         android:layout_alignStart="@+id/edtUser" />
 
@@ -49,7 +48,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
         android:text="Password"
         android:textColor="@color/WordLight"
         android:textSize="22sp"
@@ -65,22 +64,22 @@
         android:textColor="@color/WordLight"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:layout_above="@+id/textView3"
+        android:layout_below="@+id/signInButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp" />
+        android:layout_marginTop="11dp" />
 
     <Button
         android:id="@+id/btnSignup"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btnSignin"
-        android:layout_alignStart="@+id/btnSignin"
-        android:layout_below="@+id/btnSignin"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="17dp"
         android:background="@color/WordLight"
         android:text="Sign Up"
         android:textAllCaps="false"
-        android:textColor="@color/colorPrimary" />
+        android:textColor="@color/colorPrimary"
+        android:layout_below="@+id/btnSignin"
+        android:layout_alignLeft="@+id/btnSignin"
+        android:layout_alignStart="@+id/btnSignin" />
 
     <TextView
         android:id="@+id/textView5"
@@ -101,15 +100,15 @@
         android:layout_marginTop="14dp" />
 
     <com.google.android.gms.common.SignInButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:id="@+id/btnGSignin"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_alignLeft="@+id/btnFSignin"
-        android:layout_alignStart="@+id/btnFSignin"
         android:layout_below="@+id/btnFSignin"
-        android:layout_marginTop="12dp">
-
-    </com.google.android.gms.common.SignInButton>
+        android:layout_marginTop="14dp"
+        android:layout_alignRight="@+id/btnFSignin"
+        android:layout_alignEnd="@+id/btnFSignin"
+        android:layout_alignLeft="@+id/btnFSignin"
+        android:layout_alignStart="@+id/btnFSignin" />
 
     <Button
         android:id="@+id/btnGBpassword"
