--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_login.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_login.xml
@@ -15,45 +15,46 @@ tools:context="com.example.fiveguys.trip_buddy_v0.Login">
     android:text="Sign in"
     android:textAllCaps="false"
     android:textColor="@color/colorPrimary"
-    android:layout_below="@+id/btnGBpassword"
-    android:layout_centerHorizontal="true" />
+    android:layout_above="@+id/btnSignup"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="11dp" />
 
 <EditText
+    style="@style/edtTextStyle"
     android:id="@+id/edtUser"
+    android:gravity="center"
+    android:hint="User's email"
     android:layout_width="250dp"
     android:layout_height="40dp"
-    android:layout_marginTop="21dp"
-    android:background="@drawable/roundedttext"
     android:ems="10"
     android:inputType="textPersonName"
-    android:textColor="@color/colorPrimaryDark"
-    android:layout_below="@+id/textView4"
-    android:layout_centerHorizontal="true" />
+    android:layout_above="@+id/textView3"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="13dp" />
 
 <EditText
+    style="@style/edtTextStyle"
     android:id="@+id/edtPassword"
+    android:gravity="center"
+    android:hint="Password"
     android:layout_width="250dp"
     android:layout_height="40dp"
-    android:layout_alignLeft="@+id/edtUser"
-    android:layout_alignStart="@+id/edtUser"
-    android:layout_below="@+id/textView3"
-    android:layout_marginTop="12dp"
-    android:background="@drawable/roundedttext"
     android:ems="10"
     android:inputType="textPassword"
-    android:textColor="@color/colorPrimaryDark" />
+    android:layout_above="@+id/btnGBpassword"
+    android:layout_alignStart="@+id/edtUser" />
 
 <TextView
     android:id="@+id/textView3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="12dp"
     android:text="Password"
     android:textColor="@color/WordLight"
     android:textSize="22sp"
     android:textStyle="bold"
-    android:layout_below="@+id/edtUser"
-    android:layout_centerHorizontal="true" />
+    android:layout_above="@+id/edtPassword"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="10dp" />
 
 <TextView
     android:id="@+id/textView4"
@@ -63,62 +64,59 @@ tools:context="com.example.fiveguys.trip_buddy_v0.Login">
     android:textColor="@color/WordLight"
     android:textSize="22sp"
     android:textStyle="bold"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="11dp" />
+    android:layout_above="@+id/edtUser"
+    android:layout_alignEnd="@+id/btnSignin"
+    android:layout_marginBottom="13dp" />
 
 <Button
     android:id="@+id/btnSignup"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="17dp"
     android:background="@color/WordLight"
     android:text="Sign Up"
     android:textAllCaps="false"
     android:textColor="@color/colorPrimary"
-    android:layout_below="@+id/btnSignin"
-    android:layout_alignLeft="@+id/btnSignin"
-    android:layout_alignStart="@+id/btnSignin" />
+    android:layout_above="@+id/textView5"
+    android:layout_alignStart="@+id/btnSignin"
+    android:layout_marginBottom="14dp" />
 
 <TextView
     android:id="@+id/textView5"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_below="@+id/btnSignup"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="20dp"
     android:text="You can continue with the following "
-    android:textColor="@color/colorPrimaryDark" />
+    android:textColor="@color/colorPrimaryDark"
+    android:layout_above="@+id/btnFSignin"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="10dp" />
 
 <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:id="@+id/btnFSignin"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
-    android:layout_below="@+id/textView5"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="14dp" />
+    android:layout_above="@+id/btnGSignin"
+    android:layout_centerHorizontal="true" />
 
 <com.google.android.gms.common.SignInButton
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:id="@+id/btnGSignin"
-    android:layout_below="@+id/btnFSignin"
-    android:layout_marginTop="14dp"
-    android:layout_alignRight="@+id/btnFSignin"
-    android:layout_alignEnd="@+id/btnFSignin"
-    android:layout_alignLeft="@+id/btnFSignin"
-    android:layout_alignStart="@+id/btnFSignin" />
+    android:layout_alignParentBottom="true"
+    android:layout_alignStart="@+id/btnFSignin"
+    android:layout_marginBottom="27dp"
+    android:layout_alignEnd="@+id/btnFSignin" />
 
 <TextView
     android:id="@+id/btnGBpassword"
     android:layout_width="100dp"
     android:layout_height="40dp"
     android:gravity="center"
-    android:layout_alignEnd="@+id/edtPassword"
-    android:layout_alignRight="@+id/edtPassword"
-    android:layout_below="@+id/edtPassword"
     android:background="@color/LoginBackground"
     android:text="Forget your password?"
     android:textAllCaps="false"
-    android:textSize="8sp" />
+    android:textSize="8sp"
+    android:layout_above="@+id/btnSignin"
+    android:layout_alignEnd="@+id/edtPassword"
+    android:layout_marginBottom="34dp" />
 
 </RelativeLayout>
