--- a/Trip_Buddy_v0/app/src/main/res/values/styles.xml
+++ b/Trip_Buddy_v0/app/src/main/res/values/styles.xml
@@ -16,5 +16,9 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="edtTextStyle" >
+        <item name="android:background">@drawable/roundedttext</item>
+        <item name="android:textColor">@color/DarkGray</item>
+    </style>
 
 </resources>
