--- a/Trip_Buddy_v0/app/src/main/res/values/colors.xml
+++ b/Trip_Buddy_v0/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="DarkGray">#464853</color>
     <color name="colorAccent">#FF4081</color>
     <color name="LoginBackground">#b8e2de</color>
+    <color name="DarkGreen">#20bf1e</color>
     <color name="WordLight">#fcd305</color>
     <color name="WordDark">#fca105</color>
 </resources>
