--- a/Trip_Buddy_v0/app/src/main/res/layout/nav_header_main.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/nav_header_main.xml
@@ -25,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:layout_weight="0.7"
         >
         <TextView
