--- a/Trip_Buddy_v0/app/src/main/res/layout/app_bar_main.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/app_bar_main.xml
@@ -12,9 +12,9 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="top|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/ic_menu_new" />
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -25,6 +25,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="38dp"
+            android:title=""
+            android:logo="@mipmap/ic_launcher"
             android:background="@color/WordDark"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
