--- a/Trip_Buddy_v0/app/src/main/res/values/styles.xml
+++ b/Trip_Buddy_v0/app/src/main/res/values/styles.xml
@@ -12,6 +12,11 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="AppTheme.NoTitle">
+
+        <item name="windowNoTitle">true</item>
+    </style>
+
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
