--- a/Trip_Buddy_v0/app/src/main/res/layout/app_bar_main.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/app_bar_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
         android:layout_margin="@dimen/fab_margin"
+        android:scaleType="center"
         app:srcCompat="@drawable/ic_menu_new" />
 
     <android.support.design.widget.AppBarLayout
