--- a/Trip_Buddy_v0/app/src/main/res/layout/app_bar_main.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/app_bar_main.xml
@@ -20,6 +20,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -27,9 +28,20 @@
             android:layout_width="match_parent"
             android:layout_height="38dp"
             android:title=""
-            android:logo="@mipmap/ic_launcher"
             android:background="@color/WordDark"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+        </android.support.v7.widget.Toolbar>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-38dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/logo" />
+
 
     </android.support.design.widget.AppBarLayout>
 
