--- a/Trip_Buddy_v0/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Trip_Buddy_v0/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,7 +12,7 @@
             android:title="Chat" />
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/logo"
             android:title="Settings" />
         <item
             android:id="@+id/nav_share"
