--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_my_info.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_my_info.xml
@@ -25,13 +25,14 @@
         android:id="@+id/edtUserFav"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView7"
-        android:layout_alignStart="@+id/edtUserAge"
         android:background="@color/LoginBackground"
         android:ems="10"
         android:gravity="center"
         android:inputType="textPersonName"
-        android:textColor="@color/WordDark" />
+        android:textColor="@color/WordDark"
+        android:layout_alignBaseline="@+id/textView7"
+        android:layout_alignBottom="@+id/textView7"
+        android:layout_alignStart="@+id/edtUserAge" />
 
     <EditText
         android:id="@+id/edtUserAge"
@@ -82,10 +83,10 @@
         android:text="Unregister Your Account"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
-        android:layout_below="@+id/txtEdit"
-        android:layout_marginTop="13dp"
-        android:layout_alignEnd="@+id/ratingBar"
-        android:layout_alignStart="@+id/ratingBar" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/ratingBar"
+        android:layout_marginBottom="22dp"
+        android:layout_alignEnd="@+id/ratingBar" />
 
     <TextView
         android:id="@+id/textView2"
@@ -123,6 +124,7 @@
     <EditText
         android:id="@+id/editUserSex"
         android:layout_width="200dp"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
@@ -138,8 +140,8 @@
         android:layout_height="wrap_content"
         android:text="edit your profile"
         android:textColor="@color/com_facebook_button_send_background_color_pressed"
-        android:layout_marginTop="24dp"
-        android:layout_below="@+id/edtUserFav"
-        android:layout_alignEnd="@+id/UserImag" />
+        android:layout_above="@+id/button2"
+        android:layout_alignEnd="@+id/UserImag"
+        android:layout_marginBottom="21dp" />
 
 </RelativeLayout>
