--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
@@ -1,8 +1,52 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.fiveguys.trip_buddy_v0.NewTrip" />
+    tools:context="com.example.fiveguys.trip_buddy_v0.NewTrip">
+
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="352dp"-->
+        <!--android:layout_height="608dp"-->
+        <!--android:orientation="vertical"-->
+        <!--android:weightSum="8"-->
+        <!--tools:layout_editor_absoluteY="8dp"-->
+        <!--tools:layout_editor_absoluteX="8dp">-->
+
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="wrap_content"
+        android:layout_alignStart="@id/map"
+        android:layout_alignEnd="@id/map"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="4dp"
+        android:background="@color/WordLight"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="24dp">
+    <fragment
+        android:id="@+id/place_autocomplete_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity = "top|center"
+        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+        />
+
+    </android.support.v7.widget.CardView>
+    <!--</LinearLayout>-->
+
+</RelativeLayout>
