--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
@@ -30,19 +30,19 @@
         android:layout_width="wrap_content"
         android:layout_alignStart="@id/map"
         android:layout_alignEnd="@id/map"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         card_view:cardCornerRadius="4dp"
         android:background="@color/WordLight"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="24dp">
+        android:layout_margin="16dp">
     <fragment
         android:id="@+id/place_autocomplete_fragment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity = "top|center"
+        android:layout_gravity = "center"
         android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
         />
 
