--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
@@ -47,6 +47,91 @@
         />
 
     </android.support.v7.widget.CardView>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:rowCount="3"
+        android:columnCount="2"
+        android:background="@color/LoginBackground"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:id="@+id/from"
+            android:layout_width="wrap_content"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:layout_height="wrap_content"
+            android:text="From"
+            android:layout_columnWeight="1"
+            android:textSize="24sp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/WordDark"
+            />
+
+        <TextView
+            android:id="@+id/to"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="To"
+            android:layout_columnWeight="1"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@color/WordDark"
+            />
+
+        <TextView
+            android:id="@+id/startLoc"
+            android:layout_width="wrap_content"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:layout_height="wrap_content"
+            android:text="From"
+            android:layout_columnWeight="1"
+            android:textSize="24sp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/WordLight"
+            />
+
+        <TextView
+            android:id="@+id/destination"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text=""
+            android:layout_columnWeight="1"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@color/WordLight"
+            />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GO!"
+            android:textSize="36sp"
+            android:padding="5dp"
+            android:background="@color/WordDark"
+            android:textStyle="italic|bold"
+            android:textColor="@color/cardview_light_background"
+            android:layout_column="0"
+            android:layout_columnSpan="2"
+            android:layout_row="2"
+            />
+
+
+    </GridLayout>
     <!--</LinearLayout>-->
 
 </RelativeLayout>
