--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_my_info.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_my_info.xml
@@ -54,7 +54,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="27dp"
-        app:srcCompat="@color/cardview_light_background" />
+        app:srcCompat="@mipmap/ic_launcher"/>
 
     <TextView
         android:id="@+id/textView"
