--- a/Trip_Buddy_v0/app/src/main/res/layout/nav_header_main.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@color/WordLight"
     android:gravity="center"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -34,12 +34,14 @@
             android:padding="10dp"
             android:id="@+id/nav_name"
             android:text=""
+            android:textColor="@color/DarkGray"
             android:textSize="24dp"
             />
 
         <TextView
             android:id="@+id/nav_email"
             android:padding="10dp"
+            android:textColor="@color/DarkGray"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="" />
