--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
@@ -115,11 +115,11 @@
         android:layout_width="160dp"
         android:layout_height="120dp"
         android:layout_gravity="bottom"
+        android:layout_marginBottom="145dp"
         android:layout_marginLeft="@dimen/map_margin"
-        android:layout_marginBottom="150dp"
 
 
-         />
+        android:scaleType="fitEnd" />
 
 
     <!--</LinearLayout>-->
