--- a/Trip_Buddy_v0/app/src/main/res/values/styles.xml
+++ b/Trip_Buddy_v0/app/src/main/res/values/styles.xml
@@ -1,12 +1,14 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/LoginBackground</item>
         <item name="colorPrimaryDark">@color/WordDark</item>
         <item name="colorAccent">@color/WordLight</item>
     </style>
+
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -14,6 +16,18 @@
     </style>
     <style name="AppTheme.NoTitle">
         <item name="windowNoTitle">true</item>
+    </style>
+    
+    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="android:textColorPrimary">#ffffff</item>
+    </style>
+    
+    <style name="AppTheme.ButtonStyle" parent="ThemeOverlay.AppCompat">
+        <item name="colorAccent">@color/colorButton</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="textAllCaps">true</item>
     </style>
 
 
