--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
@@ -79,12 +79,13 @@
             android:layout_row="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="Your Journey Begins"
+            android:text="Search A City to Begin"
             android:layout_weight="4"
             android:gravity="center|top"
-            android:padding="5dp"
-            android:paddingTop="5dp"
-            android:textSize="24sp"
+            android:layout_gravity="top"
+            android:padding="2dp"
+
+            android:textSize="22sp"
             android:textStyle="bold"
             android:textColor="@color/DarkGray"
             />
@@ -96,8 +97,8 @@
             android:text="GO!"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="34sp"
-            android:padding="3dp"
+            android:textSize="30sp"
+            android:padding="2dp"
             android:layout_weight="3"
             android:background="@color/WordDark"
             android:textStyle="italic|bold"
