--- a/Trip_Buddy_v0/app/src/main/res/values/styles.xml
+++ b/Trip_Buddy_v0/app/src/main/res/values/styles.xml
@@ -9,19 +9,23 @@
     </style>
 
 
-
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
     <style name="AppTheme.NoTitle">
         <item name="windowNoTitle">true</item>
     </style>
-    
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_logo_orange</item>
+    </style>
+
     <style name="Toolbar" parent="ThemeOverlay.AppCompat.Dark">
         <item name="android:textColorPrimary">#ffffff</item>
     </style>
-    
+
     <style name="AppTheme.ButtonStyle" parent="ThemeOverlay.AppCompat">
         <item name="colorAccent">@color/colorButton</item>
         <item name="android:clickable">true</item>
@@ -34,9 +38,22 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-    <style name="edtTextStyle" >
+
+    <style name="edtTextStyle">
         <item name="android:background">@drawable/roundedttext</item>
         <item name="android:textColor">@color/DarkGray</item>
+    </style>
+
+    <style name="FullscreenTheme" parent="AppTheme">
+        <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="metaButtonBarStyle">?android:attr/buttonBarStyle</item>
+        <item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
+    </style>
+
+    <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/black_overlay</item>
     </style>
 
 </resources>
