--- a/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
@@ -1,30 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="100pt"
+        android:layout_height="@dimen/photo_height"
         android:id="@+id/imageView"
         android:scaleType="centerCrop"
         android:layout_centerVertical="true"
         android:clickable="true"
         android:focusable="true"
+        android:tint="@color/photo_tint_white"
         android:focusableInTouchMode="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="50sp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/cardview_light_background"
         android:text="Information"
         android:id="@+id/textView"
         android:maxLines="1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:paddingLeft="10dp"/>
+        android:gravity="center"
+        android:textStyle="bold"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        />
+
+    <ImageView
+        android:id="@+id/matchNumberTag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_bookmark"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/matchNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_alignTop="@+id/matchNumberTag"
+        android:layout_alignStart="@id/matchNumberTag"
+        android:layout_marginTop="7dp"
+        android:layout_marginStart="22dp"
+        android:text="0" />
 
 </RelativeLayout>
