--- a/Trip_Buddy_v0/app/src/main/res/values/dimens.xml
+++ b/Trip_Buddy_v0/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="map_margin">12dp</dimen>
+    <dimen name="photo_height">200dp</dimen>
 </resources>
