chat toolbar color change

--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_chat.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_chat.xml
@@ -15,8 +15,9 @@
             android:id="@+id/toolbar_main"
             android:layout_width="match_parent"
             android:theme="@style/Toolbar"
-            android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/Theme.AppCompat.Light">
+            android:layout_height="50dp"
+            android:background="@color/WordDark"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
         </android.support.v7.widget.Toolbar>
 
