--- a/Trip_Buddy_v0/app/src/main/res/layout/content_main.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/content_main.xml
@@ -27,12 +27,20 @@
         android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/gridview"
-              android:layout_width="368dp"
-              android:layout_height="511dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:numColumns="1"
               android:verticalSpacing="10dp"
               android:horizontalSpacing="10dp"
